--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,72 +6,27 @@
   width: 100%;
   height: 100px;
   margin: 0px auto;
-  background-color: #c12911;
+  background-color: #a0301e;
+  justify-content: space-around;
   z-index: 10;
 }
-
 .nav-logo {
   display: flex;
-  float: left;
-  width: 30%;
   height: auto;
+  align-items: center;
 }
 .my_logo {
   font-family: "Architects Daughter", cursive;
   color: white;
-  font-size: 60px;
-  margin: 7px 9px;
-  color: #effbfd;
+  font-size: 64px;
+  color: #e6f1f3;
 }
-.nav-links {
-  width: 46%;
-  float: right;
-  padding: 10px 15px;
-  margin: 16px 0px;
-  margin-left: auto;
-}
-.nav-links ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.nav-links ul li {
-  font-size: 25px;
-  list-style: none;
-  /* flex: 1; */
-  padding: 5px 15px;
-}
-.nav-links ul a {
-  color: white;
-  font-family: "Montserrat", sans-serif;
-}
-.nav-links ul li::after {
-  content: "";
-  width: 0;
-  height: 2px;
-  background: white;
-  display: block;
-  margin: auto;
-  transition: 0.5s;
-}
-.nav-links ul li:hover::after {
-  width: 100%;
-  cursor: pointer;
+.my_logo:hover {
+  color: #ffa387;
 }
 @media screen and (max-width: 768px) {
   .my_logo {
-    font-size: 42px;
-    margin: 21px 5px;
-  }
-  .nav-links {
-    width: 55%;
-    padding: 10px 5px;
-    display: inline-block;
-  }
-  .nav-links ul li {
-    font-size: 20px;
-    padding: 14px 4px;
-    margin: 0px 9%;
+    font-size: 60px;
   }
 }
 @media screen and (max-width: 524px) {
@@ -79,12 +34,6 @@
     height: 77px;
   }
   .my_logo {
-    font-size: 24px;
-    margin: 21px 1px;
-  }
-  .nav-links ul li {
-    font-size: 13px;
-    padding: 5px 2px;
-    margin: 0px 5%;
+    font-size: 48px;
   }
 }
